sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow_Version__c/AI_Workflow_Version__c.object-meta.xml
<CustomObject>
    <description>Stores a canvas snapshot each time a workflow is saved, enabling version history and restore.</description>
    <label>AI Workflow Version</label>
    <nameField>
        <label>Version Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Workflow Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>