sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow_Version__c/fields/AI_Workflow__c.field-meta.xml
<CustomField>
    <fullName>AI_Workflow__c</fullName>
    <label>AI Workflow</label>
    <referenceTo>AI_Workflow__c</referenceTo>
    <relationshipLabel>Versions</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>