sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow_Version__c/fields/Canvas_JSON__c.field-meta.xml
<CustomField>
    <fullName>Canvas_JSON__c</fullName>
    <label>Canvas JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>