sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow_Version__c/fields/Change_Summary__c.field-meta.xml
<CustomField>
    <fullName>Change_Summary__c</fullName>
    <label>Change Summary</label>
    <length>500</length>
    <type>TextArea</type>
</CustomField>