sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow_Version__c/fields/Saved_By__c.field-meta.xml
<CustomField>
    <fullName>Saved_By__c</fullName>
    <label>Saved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AI Workflow Versions</relationshipLabel>
    <relationshipName>AI_Workflow_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>